--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,13 @@
 # Python cache
 __pycache__/
 *.pyc
-*.pyo
 
 # Virtual environment
 venv/
+
+# Environment files
 .env
 
 # OS files
 .DS_Store
 Thumbs.db
-__pycache__/ 
-*.pyc 
-venv/ 
